...
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <!-- Transfer -->
                <LinearLayout
                    android:id="@+id/btnGoToTransfer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:orientation="vertical"
...
